# ai-lecture-note-taker

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: tests.yml
design-system/ai-lecture-note-taker/: MASTER.md
sample_assets/: lecture-transcript.txt
scripts/: run.ps1  smoke_test.ps1  stop_server.ps1
src/ai_media_lab/: __init__.py
src/ai_media_lab/common/: __init__.py  config.py  ffmpeg_service.py  files.py  openai_service.py  schemas.py  text_analysis.py
src/ai_media_lab/lecture/: __init__.py  app.py  service.py
src/ai_media_lab/lecture/static/: app.js  experience.css  index.html  styles.css
tests/: test_lecture_api.py  test_text_analysis.py
